[package]
name = "rocksdb-table"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/rocksdb-table"
repository = "https://github.com/travisbrown/rocksdb-table"
description = "Some helpers for working with RocksDB databases"
keywords = ["rocksdb"]
license-file = "LICENSE"
readme = "README.md"
version = "0.2.0"
edition = "2021"

[dependencies]
rocksdb = { version = "0.21" }
thiserror = "1"

[dev-dependencies]
chrono = "0.4"
tempfile = "3"
