[package]
name = "rocksdb-table"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/rocksdb-table"
repository = "https://github.com/travisbrown/rocksdb-table"
description = "Some helpers for working with RocksDB databases"
keywords = ["rocksdb"]
license-file = "LICENSE"
readme = "README.md"
version = "0.2.0"
edition = "2021"

[dependencies]
either = "1"
rocksdb = { version = "0.21" }
thiserror = "1"

[dev-dependencies]
derive-quickcheck-arbitrary = "0.1.3"
itertools = "0.11"
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"
