[package]
name = "rocksdb-table"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/rocksdb-table"
repository = "https://github.com/travisbrown/rocksdb-table"
description = "Some helpers for working with RocksDB databases"
keywords = ["rocksdb"]
license = "GPL-3.0-only"
readme = "README.md"
version = "0.2.0"
edition = "2021"

[dependencies]
rocksdb = { version = "0.22" }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
